fix: fix gap for grid(Sun, 17 Oct, 2:49PM)

--- a/cssMemSlider/styles.css
+++ b/cssMemSlider/styles.css
@@ -10,7 +10,8 @@ body {
   overflow: hidden;
   grid-template-columns: 75% 25%;
   grid-template-rows: 93% 24%;
-  grid-gap: 10px;
+  grid-column-gap: 0px;
+  grid-row-gap: 20px;
   padding: 10px;
   max-width: 1000px;
   position: relative;
@@ -22,7 +23,8 @@ body {
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: 80% 9% 9%;
-  grid-gap: 10px;
+  grid-column-gap: 0px;
+  grid-row-gap: 10px;  
   padding: 10px;
   max-width: 550px;
   position: relative;
